# Device-Lab-Project

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
android-capture/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-capture/app/: build.gradle.kts  proguard-rules.pro
android-capture/app/src/main/: AndroidManifest.xml
android-capture/app/src/main/java/com/moolya/devicelab/capture/: CameraPublisher.kt  CaptureApplication.kt  CaptureConfig.kt  HeartbeatScheduler.kt  MainActivity.kt  PublisherService.kt  QrEncoder.kt  QrOverlayActivity.kt  UiUtils.kt  WhipClient.kt
android-capture/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-capture/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cloud/: Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
cloud/migrations/: 001_init.sql  002_builds.sql  003_device_meta.sql
cloud/src/: app.ts  auth.ts  config.ts  context.ts  db.ts  index.ts  migrate.ts  seed.ts
cloud/src/http/: middleware.ts
cloud/src/lib/: events.ts  log.ts
cloud/src/routes/: auth.ts  binding.ts  builds.ts  registry.ts  reservation.ts  runtime.ts  tvActions.ts
cloud/src/services/: binding.ts  builds.ts  calibration.ts  install.ts  reconcile.ts  registry.ts  reservation.ts  stateMachine.ts
cloud/src/ws/: agentHub.ts  dashboardHub.ts
cloud/test/: builds.test.ts  globalSetup.ts  helpers.ts  registry.test.ts  reservation.test.ts  stateMachine.test.ts
dashboard/: .env.example  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
dashboard/src/components/: AppsPanel.tsx  AssignModal.tsx  BuildsPanel.tsx  CameraCard.tsx  DeviceView.tsx  LabOverview.tsx  Login.tsx  PowerControls.tsx  SoftRemote.tsx  TvCard.tsx
dashboard/src/hooks/: useNow.ts  useReservation.ts  useWebrtcStream.ts
dashboard/src/lib/: api.ts  auth.ts  config.ts  testable.ts  time.ts  ws.ts
dashboard/src/store/: authStore.tsx  installStore.tsx  poolStore.tsx
docs/: 03-PHASE1-ORCHESTRATION-SPEC.md
lab-agent/: .env.example  .gitignore  README.md  devices.example.yaml  pair_androidtv.py  pyproject.toml
lab-agent/device_lab_agent/: __init__.py  __main__.py  app.py  calibration.py  cloud_client.py  config.py  installer.py  protocol.py  sfu.py
lab-agent/device_lab_agent/adapters/: __init__.py  androidtv.py  base.py  cli.py  keymap.py  lg.py  samsung.py  simulator.py
lab-agent/tests/: test_app_dispatch.py  test_install_feature.py
scripts/: README.md  dash_media_test.py  dev-up.sh  e2e-smoke.sh
uploads/: b168e47b-7a20-4167-ad1f-627d6e725d04.wgt
